--- a/package.json
+++ b/package.json
@@ -10,13 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.14.2",
+    "@mantine/charts": "^7.14.2",
+    "@mantine/code-highlight": "^7.14.2",
+    "@mantine/core": "^7.14.2",
+    "@mantine/dates": "^7.14.2",
+    "@mantine/dropzone": "^7.14.2",
+    "@mantine/form": "^7.14.2",
+    "@mantine/hooks": "^7.14.2",
+    "@mantine/modals": "^7.14.2",
+    "@mantine/notifications": "^7.14.2",
+    "@mantine/nprogress": "^7.14.2",
+    "@mantine/spotlight": "^7.14.2",
+    "@mantine/tiptap": "^7.14.2",
     "@tanstack/react-router": "^1.82.2",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^7.1.0",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "recharts": "^2.13.3",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -35,6 +54,9 @@
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.81.0",
     "stylelint": "^16.10.0",
